--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,9 +1,19 @@
 <p>Nombre del empleado: {{nombre}}</p>
 <p>Apellido del empleado: {{apellido}}</p>
-<p>Edad del empleado: {{edad.value}}</p>
-<br>
-introduce la edad del empleado:<input type="text" #edad>
-<br>
-<button (click)="evaluaEdad">Push</button>
+<p>Edad del empleado: {{edad}}</p>
 <p>Empresa del empleado: {{empresa}}</p>
+<br>
+
+<!-- introduce la empresa del empleado: <input type="text" #empresa (keyup)="0" [disabled]="habilitacionCuadro"> -->
+
+introduce la empresa del empleado: <input type="text"
+[(ngModel)]="empresa">
+<br>
+
+<h4>{{textoDeRegistro}}</h4>
+
+Registrado: <input value="si" type="radio" name="nRegistro" id="registro" [checked]="usuRegistrado" (click)="setUsuarioRegistrado($event)">
+
+Registrado: <input value="no" type="radio" name="nRegistro" (click)="setUsuarioRegistrado($event)">
+
 
